# Our3DViewer

./: Dockerfile  Hints.md  README.md  docker_run.sh
src/: 20250610_1.txt  20250610_2.txt  CMakeLists.txt  Makefile  get_data.sh
src/brick_game/: common.cpp
src/brick_game/snake/: snake_model.cpp
src/controller/: controller.cpp  desktop_app.cpp
src/gui/cli/: brick_game.cpp  controller_snake.cpp  controller_tetris.cpp  interface.cpp
src/gui/desktop/: desktop_app.cpp  qt_widget.h  snake_widget.cpp
src/include/: common.h  errors.h  interface.h  main.h  snake.h  tetris.h
src/model/: errors.cpp  errors.h  main.h  model.cpp  parser.cpp  parser.h  tetris_model.cpp
src/tests/: parser_test.cpp  test_snake.cpp
src/view/: example.cpp1  facade.cpp1  facade.h1  qt_widget  qt_widget.h  scene.cpp  scene.h  tetris_widget.cpp  viewer_widget.cpp  viewer_widget.h
